--- a/css/styles.css
+++ b/css/styles.css
@@ -20,39 +20,65 @@ textarea {
     font-size: 1em;
 }
 
+    
+    
+h1 {
+    
+    float: right;
+    font-size: 3em;
+    text-align: center;
+    margin-right: 60px;
+    margin-top:5px;
+}
 
 .image { 
    
-   margin-left: 28px;
+   margin-left: 110px;
+   margin-right: 100px; 
    margin-bottom: 35px;
    padding-bottom: 35px;
    width: 100%; 
-    opacity: 0.7;
-    filter: alpha(opacity=50);
+
+}
+.imagecourse { 
    
+   margin-left: 90px;
+   margin-right: 90px; 
+   margin-bottom: 35px;
+   padding-bottom: 35px;
+   width: 100%; 
+
+}
+.imageabout { 
+   
+   margin-left: 70px;
+   margin-right: 150px; 
+   margin-bottom: 35px;
+   padding-bottom: 35px;
+   width: 100%; 
 
 }
 header {
     margin-right: 30px;
     box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 20px rgba(0, 0, 0, 0.1) inset;
-    border: none;
     border-radius: 15px;
     margin-left: 20px;
-    background: linear-gradient(#0A3A44, white);
+    background: linear-gradient(white, white, #1CA8C3);
+    border-collapse: collapse;
 
 }
 div#register{
     
+    border-collapse: collapse;
     width: 700px;
     height: 100px;
-    background-color: lightblue;
     border-radius: 10px;
     border: thick;
-    margin: 10px;
     padding: 5px;
     margin-right: 450px;
     margin-left: 175px;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
+    margin-top: 5px;
     text-align: center;
     font-size: 2.5em;
     vertical-align: middle;
@@ -66,10 +92,10 @@ body  {
         font-family:sans-serif;
         font: 'qoncrete';
         background-color: white;
-        background: linear-gradient(#0A3A44, white);
+        background: linear-gradient(white,  #1ca8c3,  white);
 }
 
-form input {
+form {
     width: 400px;
     height: auto;
     padding: 15px;
@@ -91,8 +117,7 @@ form input {
     src: url(http://www.dafont.com/qoncrete.font);
 } 
         
-    
-}
+
 div#column {
     float: left;
     width: 200px;
@@ -114,34 +139,23 @@ div#boxInfo {
 
 
 
-ul#nav li {
+ul#nav li{
     
   display: block;
-  width: 82px;
-  height: 30px;
-  margin: 0px 0px 10px 3px;
-  float: right;
-  background-color:#A0C7C7;
+  width: 85px;
+  height: auto;
+  margin-bottom: 5px;
+  margin-right:5px;
   padding: 4px;
   text-align:center;
-  vertical-align: bottom;
+  float:right;
   border-radius: 5px;
   background: radial-gradient(circle, white, lightgrey);
+  box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 20px rgba(0, 0, 0, 0.1) inset;
     
 }
-div#helpagain form {
-    
-    margin-left: 300px;
-    align-content: center;
-}
 
 
-
-h1 {
-    font-family: sans-serif;
-    font-size: 1.5em;
-    background-image: url("styles.css"); 
-}
 
 h2 { 
     
@@ -167,6 +181,35 @@ h2 {
     padding-top: 50px;
     box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 20px rgba(0, 0, 0, 0.1) inset;
     background: linear-gradient(white, #1CA8C3, #57B1C3, white);
+}
+
+.iconallpages {
+    
+    float: left;
+    width: 110px;
+    height: 100px;
+    font-size:1.4em;
+    border-radius: 5px;
+    border: thick;
+    margin-left: 60px;
+    text-align: center;
+    padding-top: 50px;
+    box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 20px rgba(0, 0, 0, 0.1) inset;
+    background: linear-gradient(white, #1CA8C3, #57B1C3, white);
+}
+.icon1{
+    
+    float:left;
+    width: 110px;
+    height: 100px;
+    font-size:1.4em;
+    border-radius: 5px;
+    border: thick;
+    margin-left: 45px;
+    text-align: center;
+    padding-top: 50px;
+    box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 20px rgba(0, 0, 0, 0.1) inset;
+    background: linear-gradient(white, red);
 }
 
 
